@@ -179,6 +179,11 @@ CMF 1.5alpha (unreleased)
 
   Bug Fixes
 
+    - Enforced new "local permissions" pattern:  each top-level CMF product
+      should have a 'permissions.py' module which imports / declares all
+      permissions used within the product;  other modules within the product
+      should import from there.  Likewise for 'exceptions.py'.
+
     - Removed pre Zope 2.6.4 compatibility code. Now Zope 2.6.4 or a later
       platform is required for CMF.
 
